# llm-sql

./: .gitignore  README.md  demo.sh  docker-compose.yml  load.py  pyproject.toml
sql/: attention.sql  encode.sql  generate.sql  layernorm.sql  mlp.sql  schema.sql
weights/: export_pgvector.py
