[project]
name = "llm-sql"
version = "0.1.0"
description = "GPT-2 small running as a forward pass in pure SQL on Postgres + pgvector"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.13.0",
    "transformers>=5.13.1",
]
authors = [
    { name = "Omar Bohsali", email = "omar.bohsali@gmail.com"}
]